--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     </head>
     <body>
         <div class="score-board">
-            <div class="">
-                <h1 class="center">BOMBERMAN</h1>
-            </div>
+            
             <div class="">
                 <h2 class="center">Player 1: <span class="score p1">0</span> </h2>
+                <p></p>
+                <h2 class="center">Lives: <span class="lives p1">0</span> </h2>
             </div>
             <div class="">
                 <h2 class="center">Player 2: <span class="score p2">0</span> </h2>
+                <p></p>
+                <h2 class="center">Lives: <span class="lives p2">0</span> </h2>
+            </div>
+            <div class="">
+                <h2 class="center">Player 3: <span class="score p3">0</span> </h2>
+                <p></p>
+                <h2 class="center">Lives: <span class="lives p3">0</span> </h2>
             </div>
         </div>
         <script src="js/phaser.min.js" charset="utf-8"></script>
